syntax = "proto3";

package api.galaxy.service.gateway.v1;

option go_package = "github.com/bpalermo/galaxy/api/service/gateway/v1";

message EchoRequest {
  string value = 1;
}

message EchoResponse {
  string value = 1;
}
