syntax = "proto3";

package galaxy.service.ledger.v1;

import "galaxy/type/account/v1/account.proto";
import "galaxy/type/money.proto";

option go_package = "github.com/bpalermo/galaxy-api/service/ledger/v1";

message NewAccountRequest {
  string owner_id = 1;
  string currency = 2;
}

message NewAccountResponse {
  galaxy.type.account.v1.Account account = 1;
}

message MyNewAccountRequest {
  string currency = 1;
}

message MyNewAccountResponse {
  string id = 1;
  string owner_id = 2;
  galaxy.type.Money balance = 3;
}

service LedgerService {

  rpc NewAccount(NewAccountRequest) returns (NewAccountResponse) {

  }

  rpc MyNewAccount(MyNewAccountRequest) returns (MyNewAccountResponse) {

  }

}
